# rag-forc-2025

./: .gitignore  README.md
.github/workflows/: deploy.yaml
notebooks/: .gitignore  bm25_retreiver.ipynb  bm_25_retreiver.ipynb  guides.pickle  hybrid_retreiver.ipynb  lib_guides_enumerate.ipynb  processing_a_library_guide.ipynb  pyproject.toml  semantic_vs_keyword_search.ipynb  smolvlm_image_caption_example.ipynb
presentation/: .gitignore  global-bottom.vue  package.json  pixi.toml  pnpm-lock.yaml  slides.md  style.css
