[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4[lxml]>=4.13.4",
    "docling>=2.43.0",
    "jupyterlab>=4.4.5",
    "pip>=25.2",
    "portkey-ai>=1.14.3",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "pymilvus>=2.6.0",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
]
